# MorpionComputerVision

./: CMakeLists.txt  README.md  build.bat  build.sh
src/: ai.cpp  grid_detection.cpp  main.cpp  morpion_cv.cpp  tictactoe_cv.cpp  tictactoe_cv.h  utils.cpp
